--- a/.github/workflows/discord-int-issue.yml
+++ b/.github/workflows/discord-int-issue.yml
@@ -4,6 +4,11 @@ on:
   issues:
     types: [opened]
 
+# Add permissions block at the job level
+permissions:
+  issues: write    # Allows creating issue comments
+  contents: read   # Allows reading repository contents
+
 jobs:
   create-forum-post:
     runs-on: ubuntu-latest
@@ -39,7 +44,6 @@ jobs:
                   }
                 }]
               },
-              \"applied_tags\": [],
               \"auto_archive_duration\": 1440
             }")
           
@@ -50,8 +54,9 @@ jobs:
             exit 1
           fi
           
-          # Get forum post ID
+          # Get thread ID and store it for the next step
           THREAD_ID=$(echo "$FORUM_POST" | jq -r '.id')
+          echo "THREAD_ID=$THREAD_ID" >> $GITHUB_ENV
           echo "Forum post created with ID: $THREAD_ID"
           
           # Send additional details as a follow-up message
@@ -65,15 +70,16 @@ jobs:
             }"
 
       - name: Update Issue with Discord Link
-        if: success()
+        if: success() && env.THREAD_ID != ''
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const issue = context.payload.issue;
+            const threadId = process.env.THREAD_ID;
+            const forumId = process.env.DISCORD_FORUM_ID;
+            
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: issue.number,
-              body: `✨ Discord forum post created in <#${{ env.DISCORD_FORUM_ID }}>`
+              issue_number: context.issue.number,
+              body: `✨ Discord forum post created! [View discussion](https://discord.com/channels/${forumId}/${threadId})`
             });
